--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>Reddit</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.2.2/ReactRouter.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/history/3.0.0-0/History.min.js"></script>
+  <script src="/react.js"></script>
+  <script src="/react-dom.js"></script>
+  <script src="/browser.min.js"></script>
+  <script src="/jquery.js"></script>
+  <script type="text/javascript" src="/underscore-min.js"></script>
+  <script src="/ReactRouter.js"></script>
+  <script src="/History.min.js"></script>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous" />
-  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" />
+  <link rel="stylesheet" href="/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="/font-awesome.css" />
   <link rel="stylesheet" type="text/css" href="/reddit.css"/>
 </head>
   <body>
