--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>Reddit</title>
   <script src="/react.js"></script>
   <script src="/react-dom.js"></script>
@@ -17,6 +17,6 @@
 </head>
   <body>
     <div id="app"></div>
-    <script type="text/babel" src="/reddit.js.jsx"></script>
+    <script type="text/babel" charset="utf-8" src="/reddit.js.jsx"></script>
   </body>
 </html>
