--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>Reddit</title>
-  <script src="/react.js"></script>
-  <script src="/react-dom.js"></script>
-  <script src="/browser.min.js"></script>
-  <script src="/jquery.js"></script>
-  <script type="text/javascript" src="/underscore-min.js"></script>
-  <script src="/ReactRouter.js"></script>
-  <script src="/History.min.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/react.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/react-dom.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/browser.min.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/jquery.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/underscore-min.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/ReactRouter.js"></script>
+  <script charset="utf-8" type="text/javascript" src="/History.min.js"></script>
 
-  <link rel="stylesheet" href="/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="/font-awesome.css" />
-  <link rel="stylesheet" type="text/css" href="/reddit.css"/>
+  <link rel="stylesheet" charset="utf-8"  href="/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" charset="utf-8" href="/font-awesome.css" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" href="/reddit.css"/>
 </head>
   <body>
     <div id="app"></div>
