--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" charset="utf-8" src="/reddit-react.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/reddit.js"></script>
   </body>
 </html>
