--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>Reddit</title>
-  <link rel="stylesheet" charset="utf-8"  href="/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" charset="utf-8" href="/reddit.css"/>
+  <link rel="stylesheet" charset="utf-8"  href="/src/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" href="/src/reddit.css"/>
 </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" charset="utf-8" src="/reddit-done.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/out/reddit.js"></script>
   </body>
 </html>
